--- a/resources/css/section_567.css
+++ b/resources/css/section_567.css
@@ -4,7 +4,7 @@
 --------------------------------*/
 
 .section-testimonials {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('img/back-customers.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('img/back-customers.jpg');
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
@@ -80,7 +80,7 @@ cite img {
 }
 
 .plan-price-meal {
-    font-size: 80%;
+    font-size: 90%;
 }
 
 .plan-box ul {
@@ -98,6 +98,7 @@ cite img {
 .plan-box div:first-child {
     background-color: #efefef;
 }
+
 
 
 /* -----------------------------
