--- a/resources/css/splash.css
+++ b/resources/css/splash.css
@@ -4,7 +4,7 @@
 
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('img/hero.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('img/hero.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
